fixed bg jumping on mobiles

--- a/src/index.css
+++ b/src/index.css
@@ -82,15 +82,6 @@ html[bg-theme='404'] {
   background-image: url(), url(), var(--bg-grid);
 }
 
-@media screen and (max-width: 1280px) {
-  html[bg-theme='404'] {
-    background-position: top, center, top;
-    background-size: auto auto, 100% 100%, 3rem 3rem;
-    background-image: url(),
-      radial-gradient(var(--red-background), var(--transparent)), var(--bg-grid);
-  }
-}
-
 body {
   overflow: overlay;
   scroll-behavior: smooth;
@@ -100,19 +91,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
   font-family: 'JetBrains Mono', monospace;
   color: var(--formal-accent);
-}
-
-@media (hover: hover) and (pointer: fine) {
-  .hover-tertiary:hover {
-    color: var(--tertiary);
-    text-decoration: underline;
-  }
-  .hover-secondary:hover {
-    color: var(--secondary-light-active-transparent);
-  }
-  .hover-button-scroll:hover {
-    opacity: 1;
-  }
 }
 
 svg:not(.Toastify__toast-icon svg) {
@@ -246,16 +224,38 @@ circle {
   }
 }
 
+@media (hover: hover) and (pointer: fine) {
+  .hover-tertiary:hover {
+    color: var(--tertiary);
+    text-decoration: underline;
+  }
+  .hover-secondary:hover {
+    color: var(--secondary-light-active-transparent);
+  }
+  .hover-button-scroll:hover {
+    opacity: 1;
+  }
+}
+
 @media screen and (max-width: 600px) {
   /* Grid for mobiles */
   html {
     background-color: var(--primary-dark);
     background-size: auto auto, 100% 100%, 0/2rem, 2rem;
-    background-position: top, top, 0;
+    background-position: top, top, top;
     background-image: url(), url('/img/background.webp'), var(--bg-grid);
   }
   .animated-blur::before {
     top: 30%;
     width: 140%;
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  html[bg-theme='404'] {
+    background-position: top, center, top;
+    background-size: auto auto, 100% 100%, 3rem 3rem;
+    background-image: url(),
+      radial-gradient(var(--red-background), var(--transparent)), var(--bg-grid);
   }
 }
